<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="220dp"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/prompt"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:minHeight="80dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/exit_app"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#e1e1e1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="44dp"
            android:minWidth="220dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/left_btn_select"
                android:text="@string/cancel"
                android:textColor="@color/btntextcolor"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/single_line"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D1D1D1"
                android:orientation="horizontal" />

            <Button
                android:id="@+id/neutral_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/left_btn_select"
                android:text="@string/dismiss"
                android:textColor="@color/btntextcolor"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/second_line"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D1D1D1"
                android:orientation="horizontal" />

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/right_btn_select"
                android:text="@string/confirm"
                android:textColor="@color/btntextcolor"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>